tests/fail/if16.rx
/*
Test Package: Semantic-1
Test Target: if
Author: GitHub Copilot
Time: 2025-12-02
Verdict: Fail
Comment: if expression cannot be used as lvalue (assignment target)
*/

fn main() {
    let mut x: i32 = 1;
    let mut y: i32 = 2;
    // IfExpr can only be rvalue, cannot assign to it
    (if (x > 0) { x } else { y }) = 10;
    exit(0);
}
